--- a/web-server/static/index.html
+++ b/web-server/static/index.html
@@ -3,27 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HoloLens Stream Test</title>
+    <title>HoloLens WebRTC Stream</title>
 </head>
 <body>
-    <h1>WebSocket Connection Test</h1>
-    <p id="status">Connecting...</p>
+    <h1>HoloLens Video Stream</h1>
+    <video id="video-stream" autoplay playsinline style="max-width: 100%;"></video>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
     <script>
-        // Connect to WebSocket server
+        const video = document.getElementById('video-stream');
         const socket = io.connect('http://' + window.location.hostname + ':8080');
+        const peerConnection = new RTCPeerConnection();
 
-        // Update status when connected
-        socket.on('connect', () => {
-            document.getElementById('status').textContent = 'Connected to WebSocket!';
-            console.log('Connected to WebSocket server');
+        peerConnection.ontrack = (event) => {
+            video.srcObject = event.streams[0];
+        };
+
+        socket.on('offer', async (offer) => {
+            await peerConnection.setRemoteDescription(new RTCSessionDescription(offer));
+            const answer = await peerConnection.createAnswer();
+            await peerConnection.setLocalDescription(answer);
+            socket.emit('answer', peerConnection.localDescription);
         });
 
-        // Handle disconnection
-        socket.on('disconnect', () => {
-            document.getElementById('status').textContent = 'Disconnected from WebSocket';
+        socket.on('candidate', async (candidate) => {
+            await peerConnection.addIceCandidate(new RTCIceCandidate(candidate));
         });
+
+        peerConnection.onicecandidate = ({ candidate }) => {
+            if (candidate) {
+                socket.emit('candidate', candidate);
+            }
+        };
     </script>
 </body>
 </html>
